# OnnxCxxTest

./: .gitignore  CMakeLists.txt  cvdnn_test.cpp  cvdnn_test.h  main.cpp  onnx_test.cpp  onnx_test.h  readme.md  torch_test.cpp  torch_test.h
data/: super_resolution.onnx  super_resolution.pt
